[gd_scene load_steps=40 format=3 uid="uid://bl3dnwhmbvq7e"]

[ext_resource type="Script" uid="uid://bs7dxxskbxu4o" path="res://scripts/player/MainPlayerScripts/main_player.gd" id="1_3h6gf"]
[ext_resource type="Script" uid="uid://d2q2ib2ysam0l" path="res://scripts/core/managers/InventoryManager.gd" id="2_vlwgi"]
[ext_resource type="Script" uid="uid://bpub60p0wky4y" path="res://scripts/core/ui_scripts/player_inventory.gd" id="3_bxsaa"]
[ext_resource type="Script" uid="uid://dvdxtbxvi6oqs" path="res://scripts/player/MainPlayerScripts/player_controller.gd" id="4_sr8sg"]
[ext_resource type="PackedScene" uid="uid://b7kvb8t8mdb0i" path="res://scenes/InventoryUI.tscn" id="5_wd8xg"]
[ext_resource type="Script" uid="uid://dtefr2kguqvvl" path="res://scripts/core/state/state_machine.gd" id="6_e6xi4"]
[ext_resource type="Script" uid="uid://b5ljoq2qxi51l" path="res://scripts/player/player_movement_states/player_idle_state.gd" id="7_ueg6m"]
[ext_resource type="Script" uid="uid://br6jadhq64704" path="res://scripts/player/player_movement_states/player_movement_state.gd" id="8_m64mv"]
[ext_resource type="Script" uid="uid://bi8okmpdd8kpf" path="res://scripts/player/player_movement_states/player_jump_state.gd" id="9_ql4ua"]
[ext_resource type="Script" uid="uid://bel2otsfxu5yi" path="res://scripts/player/player_action_states/player_block_state.gd" id="10_ncu4r"]
[ext_resource type="Script" uid="uid://du4bs77gwdqgr" path="res://scripts/player/player_action_states/player_attack_state.gd" id="11_50e1p"]
[ext_resource type="Script" uid="uid://b27g1vaisanmo" path="res://scripts/player/player_action_states/player_parry_state.gd" id="12_8u17c"]
[ext_resource type="Script" uid="uid://ck8hmp0818mgj" path="res://scripts/core/Hit_Hurt_Boxes/hurtbox.gd" id="13_rfihl"]
[ext_resource type="Texture2D" uid="uid://dvi8f34l5fdo8" path="res://assets/characters/MainPlayer/block_keriso-Sheet.png" id="14_frxgo"]
[ext_resource type="Script" uid="uid://dyel5hqilhxh2" path="res://scripts/core/Hit_Hurt_Boxes/attack_hitbox.gd" id="15_qc0mh"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://swqow8b6bojn" path="res://scenes/players/player.tres" id="16_pxg8l"]
[ext_resource type="Script" uid="uid://cj3ofjxdyv5sd" path="res://scripts/player/MainPlayerScripts/player_animation.gd" id="17_4f5qc"]
[ext_resource type="Texture2D" uid="uid://c2aw2eoo7coth" path="res://assets/characters/MainPlayer/sword_sheathe_breathe-Sheet.png" id="18_cm8gn"]
[ext_resource type="Texture2D" uid="uid://dhmqofc7loxpc" path="res://assets/characters/MainPlayer/sword_out_breathe-Sheet.png" id="19_oi0bs"]
[ext_resource type="Texture2D" uid="uid://cowc0vev13gfk" path="res://assets/characters/MainPlayer/running_sheathed-Sheet.png" id="20_6skj4"]
[ext_resource type="Texture2D" uid="uid://8cp7811r5r1k" path="res://assets/characters/MainPlayer/running.png" id="21_scjxb"]
[ext_resource type="Texture2D" uid="uid://dphxmn3hu3dkq" path="res://assets/characters/MainPlayer/sword_sheathe-Sheet.png" id="22_guu80"]
[ext_resource type="Texture2D" uid="uid://htwtlegp2edw" path="res://assets/characters/MainPlayer/sword_out-Sheet.png" id="23_yeyqo"]
[ext_resource type="Texture2D" uid="uid://blwfrnoswxsbs" path="res://assets/characters/MainPlayer/keriso_walk-Sheet.png" id="24_6b2ci"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_duqpn"]
radius = 2.42424
height = 21.818182

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ub0sc"]
radius = 2.42424
height = 23.030304

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xjq4m"]
size = Vector2(41.5, 40.5)

[sub_resource type="Animation" id="Animation_na2w2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("14_frxgo")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharacterBody2D/Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.49368683, 0.40530303)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CharacterBody2D/AttackHitBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yervt"]
resource_name = "attack"
length = 2.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["PlayerIdleState"],
"method": &"change_state"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/AttackHitBox")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"clear_hit_targets"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/AttackHitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_cbsqg"]
resource_name = "block"
length = 0.45
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("14_frxgo")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharacterBody2D/Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.49, 0.402)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CharacterBody2D")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.44),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["PlayerIdleState"],
"method": &"change_state"
}]
}

[sub_resource type="Animation" id="Animation_regva"]
resource_name = "idle_sheath"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("18_cm8gn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharacterBody2D/Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.49, 0.402)]
}

[sub_resource type="Animation" id="Animation_11llm"]
resource_name = "idle_unsheath"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("19_oi0bs")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharacterBody2D/Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.49, 0.402)]
}

[sub_resource type="Animation" id="Animation_absal"]
resource_name = "run_sheath"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("20_6skj4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_bbg0t"]
resource_name = "run_unsheath"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("21_scjxb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharacterBody2D/Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.49, 0.402)]
}

[sub_resource type="Animation" id="Animation_duqpn"]
resource_name = "sheathing"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("22_guu80")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharacterBody2D/Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.49, 0.402)]
}

[sub_resource type="Animation" id="Animation_2lu3o"]
resource_name = "unsheathing"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("23_yeyqo")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharacterBody2D/Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.25, 0.205)]
}

[sub_resource type="Animation" id="Animation_su5v1"]
resource_name = "walk_sheath"

[sub_resource type="Animation" id="Animation_lr3tv"]
resource_name = "walk_unsheath"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("24_6b2ci")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CharacterBody2D/Sprite2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.49, 0.402)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_su5v1"]
_data = {
&"RESET": SubResource("Animation_na2w2"),
&"attack": SubResource("Animation_yervt"),
&"block": SubResource("Animation_cbsqg"),
&"idle_sheath": SubResource("Animation_regva"),
&"idle_unsheath": SubResource("Animation_11llm"),
&"run_sheath": SubResource("Animation_absal"),
&"run_unsheath": SubResource("Animation_bbg0t"),
&"sheathing": SubResource("Animation_duqpn"),
&"unsheathing": SubResource("Animation_2lu3o"),
&"walk_sheath": SubResource("Animation_su5v1"),
&"walk_unsheath": SubResource("Animation_lr3tv")
}

[node name="MainPlayer" type="Node"]
script = ExtResource("1_3h6gf")

[node name="InventoryManager" type="Node" parent="."]
script = ExtResource("2_vlwgi")

[node name="InventoryController" type="Node" parent="."]
script = ExtResource("3_bxsaa")

[node name="CharacterBody2D" type="CharacterBody2D" parent="." groups=["Player"]]
position = Vector2(-102, 19.000002)
scale = Vector2(1.65, 1.65)
collision_layer = 4
script = ExtResource("4_sr8sg")

[node name="RayCast2D" type="RayCast2D" parent="CharacterBody2D"]
position = Vector2(0, -10.303)
rotation = 3.1415927
scale = Vector2(3.404, 4.552)
target_position = Vector2(16.2035, -0.133152)
collide_with_areas = true

[node name="InteractUI" type="CanvasLayer" parent="CharacterBody2D"]
visible = false

[node name="ColorRect" type="ColorRect" parent="CharacterBody2D/InteractUI"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
color = Color(0.225415, 0.596894, 0.502769, 1)

[node name="Label" type="Label" parent="CharacterBody2D/InteractUI/ColorRect"]
layout_mode = 0
offset_right = 299.0
offset_bottom = 49.0
theme_override_font_sizes/font_size = 25
text = "Press E tp pickup"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inventory" type="CanvasLayer" parent="CharacterBody2D"]
visible = false

[node name="ColorRect" type="ColorRect" parent="CharacterBody2D/Inventory"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1764, 0.513933, 0.412723, 1)

[node name="Label" type="Label" parent="CharacterBody2D/Inventory/ColorRect"]
z_index = 10
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 80
text = "Inventory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InventoryUI" parent="CharacterBody2D/Inventory/ColorRect" instance=ExtResource("5_wd8xg")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_top = -73.0
offset_bottom = -73.0
grow_horizontal = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(-1.8181839, -10.303032)
shape = SubResource("CapsuleShape2D_duqpn")

[node name="StateMachine" type="Node" parent="CharacterBody2D"]
script = ExtResource("6_e6xi4")

[node name="Idle" type="Node" parent="CharacterBody2D/StateMachine"]
script = ExtResource("7_ueg6m")

[node name="movement" type="Node" parent="CharacterBody2D/StateMachine"]
script = ExtResource("8_m64mv")

[node name="jump" type="Node" parent="CharacterBody2D/StateMachine"]
script = ExtResource("9_ql4ua")

[node name="block" type="Node" parent="CharacterBody2D/StateMachine"]
script = ExtResource("10_ncu4r")

[node name="attack" type="Node" parent="CharacterBody2D/StateMachine"]
script = ExtResource("11_50e1p")

[node name="parry" type="Node" parent="CharacterBody2D/StateMachine"]
script = ExtResource("12_8u17c")

[node name="ActionStateMachine" type="Node" parent="CharacterBody2D"]
script = ExtResource("6_e6xi4")

[node name="Hurtbox" type="Area2D" parent="CharacterBody2D"]
collision_layer = 4
collision_mask = 8
script = ExtResource("13_rfihl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/Hurtbox"]
position = Vector2(-2.424243, -10.909093)
shape = SubResource("CapsuleShape2D_ub0sc")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
position = Vector2(-3.0302963, -15.151516)
scale = Vector2(0.49368683, 0.40530303)
texture = ExtResource("14_frxgo")
hframes = 9

[node name="UnsheathTimer" type="Timer" parent="CharacterBody2D"]
wait_time = 10.0
one_shot = true

[node name="AttackHitBox" type="Area2D" parent="CharacterBody2D"]
position = Vector2(3.030305, -21.81818)
scale = Vector2(0.606, 0.606)
collision_layer = 16
collision_mask = 32
script = ExtResource("15_qc0mh")
metadata/_custom_type_script = "uid://dyel5hqilhxh2"

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/AttackHitBox"]
position = Vector2(-17.001701, 0)
shape = SubResource("RectangleShape2D_xjq4m")
disabled = true

[node name="AnimationTree" type="AnimationTree" parent="CharacterBody2D"]
root_node = NodePath("../..")
tree_root = ExtResource("16_pxg8l")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/attack = false
parameters/conditions/block = false
parameters/conditions/idle = false
parameters/conditions/idle_sheath = false
parameters/conditions/run = false
parameters/conditions/run_sheath = false
parameters/conditions/sheathing = false
parameters/conditions/unsheathing = true
parameters/conditions/walk = false
parameters/conditions/walk_sheath = false

[node name="AnimationHandler" type="Node" parent="CharacterBody2D" node_paths=PackedStringArray("player", "animation_tree")]
script = ExtResource("17_4f5qc")
player = NodePath("..")
animation_tree = NodePath("../AnimationTree")

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_su5v1")
}

[connection signal="timeout" from="CharacterBody2D/UnsheathTimer" to="CharacterBody2D" method="_on_unsheath_timer_timeout"]
[connection signal="area_entered" from="CharacterBody2D/AttackHitBox" to="CharacterBody2D/AttackHitBox" method="_on_area_entered"]
